plugins/kotlin/idea/tests/testData/highlighterMetaInfo/Todo.kt.highlighting
// FIR_IDENTICAL
// CHECK_SYMBOL_NAMES
// HIGHLIGHTER_ATTRIBUTES_KEY
// <!HIGHLIGHTING("descr='TODO This is a todo in line comment'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>TODO This is a todo in line comment<!>

/* <!HIGHLIGHTING("descr='TODO This is a todo in block comment '; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>TODO This is a todo in block comment <!>*/

/**
 * <!HIGHLIGHTING("descr='TODO This is a todo in KDoc'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>TODO This is a todo in KDoc<!>
 */

//<!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>todo: This is<!>
// <!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>multiline td<!>
/* <!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>and even longer<!>
   <!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>up to this line<!>
 */

/**
 * <!HIGHLIGHTING("descr='todo: This is multiline td'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>todo: This is<!>
 *  <!HIGHLIGHTING("descr='todo: This is multiline td'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>multiline td<!>
 */

//<!HIGHLIGHTING("descr='todo: This is'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>todo: This is<!>
//single line td

/**
 * <!HIGHLIGHTING("descr='todo: This is'; highlightingTextAttributesKey='TODO_DEFAULT_ATTRIBUTES'")!>todo: This is<!>
 * single line td also
 */
